test/samples/invalid/resolving/fresh_out.maruir
struct Foo {
	x: u32;
	y: u32;
}

fun alloc_foo<'fresh M>(x: u32, y: u32): Foo *M
locals res: Foo *M;
{
	entry:
		res := alloc Foo in M;
		store x in res.x;
		store y in res.y;
		return res;
}

fun main<M2>()
locals
	f2: Foo *M2;
{
	entry:
		f2 := call alloc_foo<M2>(u32(3), u32(4));
		return;
		
}
